Update My Portflio offl.html

--- a/My Portflio offl.html
+++ b/My Portflio offl.html
@@ -21,12 +21,12 @@
 			</ul>
 		</nav>
    <div class="detail">
-	<h1>I'm <span>GOURU <span>CHARVITHA</h1>
+	<h1>I'm <span>GOURU <span>CHARITHA</h1>
 	<p class="hey"><i><b>Passionate Web Developer and purely interested on creating new websites.</i></b></p>
 	<br>
 	<p class="hey"><b>This is my official Portfolio Website</b></p>
 
-	<a href="">DOWNLOAD RESUME</a>
+	<a href="file:///C:/Users/JYOSHNA/OneDrive/Desktop/notes%20pdf/charitha.jpg">DOWNLOAD RESUME</a>
 	<div class="images">
 		<img src="file:///C:/Users/JYOSHNA/OneDrive/Pictures/anime.jpeg" class="shape">
 		<img src="" class="boy">
